infrastructure/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.cluster.wool.homes`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    store:
      name: default
      namespace: traefik
